removed agents link from navigation and corrected text alignment in CSS

--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,6 @@
     align-items: start;
     color: white;
     text-align: laft;
-    font-family: 'Poppins', sans-serif;
     font-weight: 600;
     background-image: url('../assets/keys.jpg');
     background-size: cover;
